# osmotr

app/: pyproject.toml
app/app/: __init__.py
